[gd_scene load_steps=4 format=3 uid="uid://ctear2ynk1rtb"]

[ext_resource type="FontFile" uid="uid://d38vnjqlmdaru" path="res://Assets/Fonts/m3x6.ttf" id="1_07nvw"]
[ext_resource type="Script" path="res://Scripts/SceneScripts/cutscene.gd" id="1_nxcab"]
[ext_resource type="PackedScene" uid="uid://bkv8jxt24sl4t" path="res://Levels/level_one.tscn" id="2_y80a5"]

[node name="cutscene" type="Node2D"]
script = ExtResource("1_nxcab")
first_scene = ExtResource("2_y80a5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 674.0
offset_top = 260.0
offset_right = 714.0
offset_bottom = 311.0
theme_override_colors/font_color = Color(0.533333, 0.701961, 0.85098, 1)
theme_override_fonts/font = ExtResource("1_07nvw")
theme_override_font_sizes/font_size = 60
text = "..."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 674.0
offset_top = 300.0
offset_right = 714.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0.729412, 0.639216, 0.772549, 1)
theme_override_fonts/font = ExtResource("1_07nvw")
theme_override_font_sizes/font_size = 60
text = "..."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 599.0
offset_top = 357.0
offset_right = 784.0
offset_bottom = 408.0
theme_override_colors/font_color = Color(0.533333, 0.701961, 0.85098, 1)
theme_override_fonts/font = ExtResource("1_07nvw")
theme_override_font_sizes/font_size = 60
text = "What's That?"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 599.0
offset_top = 413.0
offset_right = 784.0
offset_bottom = 464.0
theme_override_colors/font_color = Color(0.729412, 0.639216, 0.772549, 1)
theme_override_fonts/font = ExtResource("1_07nvw")
theme_override_font_sizes/font_size = 60
text = "An Adventurer?"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true
autostart = true
